<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cschreib.pisoundcontrol.ConnectActivity">

    <EditText
        android:id="@+id/editTextIP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_ip_prompt"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonConnect"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:maxLines="1" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="connect"
        android:text="@string/button_ip_connect"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextIP"
        app:layout_constraintLeft_toRightOf="@+id/editTextIP"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIP">

        <RelativeLayout
            android:layout_width="23dp"
            android:layout_height="23dp">

            <ProgressBar
                android:id="@+id/progressBarConnect"
                style="@android:style/Widget.ProgressBar"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:visibility="visible"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="156dp" />

            <ImageView
                android:id="@+id/imageViewConnectStatus"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                app:srcCompat="@android:drawable/presence_invisible"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="345dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textViewConnectStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/connection_status_disconnected"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/relativeLayout3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout3" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.538">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewStatusIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/connection_status_ip"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewConnectStatus" />

            <TextView
                android:id="@+id/textViewStatusHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_status_host"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStatusIP" />

            <TextView
                android:id="@+id/textViewStatusPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_status_port"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStatusHost" />

            <TextView
                android:id="@+id/textViewStatusVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_status_version"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStatusPort" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
